--- a/qd/dev/source/layouts/LayoutDesigner.GeneralPage.xml
+++ b/qd/dev/source/layouts/LayoutDesigner.GeneralPage.xml
@@ -5,7 +5,11 @@
 			
 			
 			
-		<SpanField label1="Group:" type1="ComboBox" verify1type="number" tooltip1="Parent folder/group for this layout file" varName1="ParentFolderField" required1="true"><List1Value label="admin" model="../../../qd/admin/source/layouts/"/><List1Value label="dev" model="../../../qd/dev/source/layouts/"/></SpanField><SpanField label1="File Name:" type1="TextField" verify1type="string" tooltip1="File name for the Layout File on the server" varName1="FileNameField" required1="true" verify1="true" verify1min="1" verify1max="256"/><DoubleField label1="Data Object:" type1="ComboBox" label2=" " type2="Spacer" verify1type="number" verify2type="number" tooltip1="Data Object used to provide values for the fields in this layout." varName1="DataObjectField"/></FieldArea>
+			<SpanField label1="Group:" type1="ComboBox" verify1type="number" tooltip1="Parent folder/group for this layout file" varName1="ParentFolderField" required1="true">
+				<List1Value label="admin" model="../../../qd/admin/source/layouts/"/>
+				<List1Value label="dev" model="../../../qd/dev/source/layouts/"/>
+				<List1Value label="ttvx" model="../../../qd/ttvx/source/layouts/"/>
+		</SpanField><SpanField label1="File Name:" type1="TextField" verify1type="string" tooltip1="File name for the Layout File on the server" varName1="FileNameField" required1="true" verify1="true" verify1min="1" verify1max="256"/><DoubleField label1="Data Object:" type1="ComboBox" label2=" " type2="Spacer" verify1type="number" verify2type="number" tooltip1="Data Object used to provide values for the fields in this layout." varName1="DataObjectField"/></FieldArea>
 		
 		
 	</GroupBox>
